--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "vue": "^2.1.10"
     },
     "dependencies": {
-        "dropzone": "^5.1.1",
-        "materialize-css": "^0.100.2"
+        "materialize-css": "^0.100.2",
+        "vue2-dropzone": "^2.3.6"
     }
 }
