--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
         "jquery": "^3.1.1",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
-        "vue": "^2.1.10"
+        "vue": "^2.5.16"
     },
     "dependencies": {
         "materialize-css": "^0.100.2",
-        "vue2-dropzone": "^2.3.6"
+        "vue-template-compiler": "^2.5.16",
+        "vue2-dropzone": "^2.3.6",
+        "vuex": "^3.0.1"
     }
 }
